--- a/MemgrindDifferencingEngine/MemgrindDifferencingEngine.csproj
+++ b/MemgrindDifferencingEngine/MemgrindDifferencingEngine.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataModel\MemgrindInfo.cs" />
+    <Compile Include="MemgrindLogParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
