Some rudimentary grouping to improve performance.

--- a/MemgrindDifferencingEngine/MemgrindDifferencingEngine.csproj
+++ b/MemgrindDifferencingEngine/MemgrindDifferencingEngine.csproj
@@ -41,9 +41,11 @@
   <ItemGroup>
     <Compile Include="DataModel\MemgrindInfo.cs" />
     <Compile Include="MemgrindLogParser.cs" />
+    <Compile Include="Parsing\ParseItemBase.cs" />
+    <Compile Include="Parsing\ParseAfterLine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Files.cs" />
-    <Compile Include="Util\ParseItem.cs" />
+    <Compile Include="Parsing\ParseSingleLineItem.cs" />
     <Compile Include="Util\re.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
