Parse multiline errors (first go)
Does invalid read and conditional jump

--- a/MemgrindDifferencingEngine/MemgrindDifferencingEngine.csproj
+++ b/MemgrindDifferencingEngine/MemgrindDifferencingEngine.csproj
@@ -39,8 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataModel\MemGrindDumpError.cs" />
     <Compile Include="DataModel\MemgrindInfo.cs" />
     <Compile Include="MemgrindLogParser.cs" />
+    <Compile Include="Parsing\ParseMultilineMessage.cs" />
     <Compile Include="Parsing\ParseItemBase.cs" />
     <Compile Include="Parsing\ParseAfterLine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
