--- a/MemgrindDifferencingEngine/MemgrindDifferencingEngine.csproj
+++ b/MemgrindDifferencingEngine/MemgrindDifferencingEngine.csproj
@@ -44,18 +44,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutoFillTable.cs" />
+    <Compile Include="ExcelHelpers\AutoFillTable.cs" />
     <Compile Include="DataModel\MemGrindDumpError.cs" />
     <Compile Include="DataModel\MemgrindInfo.cs" />
     <Compile Include="DumpToExcel.cs" />
-    <Compile Include="ExcelColumn.cs" />
+    <Compile Include="ExcelHelpers\ExcelColumn.cs" />
     <Compile Include="MemgrindLogParser.cs" />
     <Compile Include="Parsing\ParseMultilineMessage.cs" />
     <Compile Include="Parsing\ParseItemBase.cs" />
     <Compile Include="Parsing\ParseAfterLine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Collections.cs" />
-    <Compile Include="Util\ExcelUtils.cs" />
+    <Compile Include="ExcelHelpers\ExcelUtils.cs" />
     <Compile Include="Util\Files.cs" />
     <Compile Include="Parsing\ParseSingleLineItem.cs" />
     <Compile Include="Util\re.cs" />
