--- a/MemgrindDifferencingEngine/MemgrindDifferencingEngine.csproj
+++ b/MemgrindDifferencingEngine/MemgrindDifferencingEngine.csproj
@@ -44,6 +44,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataModel\MemGrindLossRecord.cs" />
     <Compile Include="ExcelHelpers\AutoFillTable.cs" />
     <Compile Include="DataModel\MemGrindDumpError.cs" />
     <Compile Include="DataModel\MemgrindInfo.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="Util\Files.cs" />
     <Compile Include="Parsing\ParseSingleLineItem.cs" />
     <Compile Include="Util\re.cs" />
+    <Compile Include="Util\Strings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
